--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,605 @@
 .App {
+  /* background-image: url('./images/Home\ \(1\).png');
+  
+  background-repeat: no-repeat;
+  background-size: cover; */
+
+  width: 100%;
+}
+
+body {
+  background-color: #00063a;
+}
+
+.parent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  padding: 0 5%;
+
+  height: 90vh;
+
+  flex-wrap: wrap;
+}
+
+#cover {
+  height: 65vh;
+
+  box-shadow: 43px 34px 87px -5px #1f41bb;
+  /* box-shadow: 3px 0px 100px 19px #1F41BB; */
+
+  border-radius: 20px;
+  margin-right: 80px;
+
+  transition: transform 0.2s;
+  overflow: hidden;
+  /* transform-style: preserve-3d; */
+  perspective: 1000px;
+}
+
+#cover:hover {
+  transform: perspective(1000px) rotateX(-5deg) rotateY(5deg);
+}
+
+/* 
+#cover:hover:hover:before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  transform-origin: right;
+  transform: rotateY(-10deg);
+}
+
+#cover:hover:hover:after {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  transform-origin: left;
+  transform: rotateY(10deg);
+} */
+
+.parent h1 {
+  font-size: 50px;
+}
+
+.btns {
+  display: flex;
+  gap: 10px;
+}
+
+.btns a {
+  text-decoration: none;
+
+  color: white;
+
+  letter-spacing: 2px;
+}
+
+.btns div {
+  background-image: linear-gradient(
+    to right,
+    #9340ff 0%,
+    #ff3c5f 51%,
+    #ff3c5f 100%
+  );
+  margin-right: 10px;
+  padding: 2% 4%;
   text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 3px #eee;
+  border-radius: 20px;
+  display: block;
+  margin-top: 30px;
+  font-weight: 500;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sumbit-btns {
+  background-image: linear-gradient(
+    to right,
+    #0578a2 0%,
+    #56dedc 51%,
+    #00e0fe 100%
+  );
+  /* background-image: linear-gradient(to right, #620148 0%, #a20578  51%, #7f488c  100%); */
+  margin-right: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: #00063e;
+  box-shadow: 0 0 3px #eee;
+  border-radius: 20px;
+  display: block;
+  margin-top: 30px;
+  font-weight: 500;
+  border: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sumbit-btns:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #00063e;
+  text-decoration: none;
+  box-shadow: 0 0 10px #eee;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.try-btn {
+  display: flex;
+  /* align-items: flex-end; */
+  justify-content: center;
+  /* margin-top: 0; */
+  /* padding-top: 0; */
+}
+
+.try-btn div {
+  background-image: linear-gradient(
+    to right,
+    #00063e 0%,
+    #06127d 51%,
+    #0050fe 100%
+  );
+
+  margin-top: 0;
+  /* padding-top: 3%; */
+
+  box-shadow: 0 0 3px #00063e;
+  padding: 15% 50%;
+  white-space: nowrap;
+}
+
+.btns div:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+  box-shadow: 0 0 10px #eee;
+}
+
+#start {
+  /* flex:2 */
+  padding: 15px 70px;
+}
+
+#about-us {
+  background-image: linear-gradient(
+    to right,
+
+    #545653 0%,
+
+    #a2a4a485 51%,
+    #aaabab95 100%
+  );
+}
+
+.services {
+  /* height: 40vh; */
+  width: 100%;
+
+  /* background-image: url('./images/wave-haikei\ \(7\).png'); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+
+  align-items: flex-start;
+
+  justify-content: center;
+}
+
+.item {
+  width: calc(33% - 4%);
+  height: 40vh;
+  /* flex:block; */
+  align-items: center;
+  /* justify-content: center; */
+  padding: 20px;
+
+  justify-content: space-between;
+  /* flex: 1; Allow the item to grow and take available vertical space */
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5%;
+}
+.try-btn {
+  margin-top: auto;
+}
+.item h1 {
+  margin-bottom: 0;
+}
+.item h1 h4 {
+  margin-right: 30px;
+}
+
+/* Styling for the file input wrapper */
+.img-clf {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  /* background-color: #7a7d7d; */
+  width: 45vw;
+  height: 40vh;
+
+  box-shadow: 32px 36px 81px -21px #1f41bb;
+  margin-bottom: 5%;
+  border-radius: 20px;
+}
+
+.upload-icon {
+  height: 40vh;
+
+  cursor: pointer;
+  object-fit: cover;
+  /* margin-top: 10%; */
+}
+
+/* Styling for the actual file input (hidden) */
+.file-input {
+  background-color: red;
+  position: absolute;
+  opacity: 0;
+  width: 40%;
+  height: 40%;
+}
+
+.clf-page {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+ul li {
+  margin-top: 20px;
+}
+
+/* 
+.wrapper .item:nth-child(2) ul{
+  margin-bottom: 50px;
+} */
+
+center h1 {
   color: white;
+  margin-top: 0;
+  /* margin-bottom: 7%; */
+  padding-top: 5%;
 }
 
-.App-link {
-  color: #61dafb;
+hr {
+  height: 1px; /* Adjust the height of the line */
+  width: 40%; /* Adjust the width of the line */
+  background-color: #ccc; /* Adjust the color of the line */
+  border: none; /* Remove the default border */
+  margin: 10px auto;
+  margin-bottom: 5%;
+  margin-top: 2%;
 }
 
-@keyframes App-logo-spin {
+/* .wrapper .item:first-child{
+  background-color: rgb(1, 1, 120);
+} */
+
+.wrapper .item:nth-child(1) {
+  background-color: rgb(1, 37, 167);
+}
+
+.wrapper .item:nth-child(2) {
+  background-color: #0147d3;
+}
+
+.wrapper .item:nth-child(3) {
+  background-color: #03baed;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 7%;
+}
+
+.about-us {
+  /* background-image: url('./images/wave-haikei\ \(3\).png'); */
+  /* background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; */
+
+  height: 70vh;
+  width: 80%;
+
+  box-shadow: 62px 67px 91px -21px #1f41bb;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10%;
+  padding: 0 5%;
+  border-radius: 30px;
+  margin-top: 4%;
+}
+
+.desc {
+  width: 40vw;
+  display: block;
+  margin-bottom: 10%;
+  /* max-height: 40vh; */
+}
+
+.desc h1 {
+  font-size: 2.8rem;
+}
+.desc hr {
+  margin: 0;
+  margin-top: 3%;
+  float: left;
+}
+
+.desc h3 {
+  padding-top: 5%;
+  font-size: 1.5rem;
+  font-weight: 300;
+  letter-spacing: 2px;
+  line-height: 35px;
+}
+
+#ai-img {
+  width: 18vw;
+  height: 33vh;
+  /* padding-left: 3%; */
+  transition: transform 0.2s ease-in-out;
+}
+
+#ai-img:hover {
+  transform: scale(1.01);
+}
+
+.form {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  /* border: 1px solid #cccccc9a; */
+  border-radius: 20px;
+
+  box-shadow: 32px 36px 81px -21px #1f41bb;
+  /* background-color: rgba(208, 210, 210, 0.3); Set the background color with opacity */
+  /* backdrop-filter: blur(18px); */
+  padding-bottom: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.summery{
+  padding: 0 20%;
+}
+
+.result {
+  margin-top: 2%;
+  margin-bottom: 2%;
+
+  padding-top: 20px;
+  color: white;
+  /* overflow: hidden; Hide the overflow to create the typing effect */
+
+  /* Animation for the typing effect */
+  /* animation: typing 2s steps(40, end) forwards; */
+}
+
+@keyframes typing {
   from {
-    transform: rotate(0deg);
+    width: 0;
   }
   to {
-    transform: rotate(360deg);
+    width: 100%;
+
+    /* border-top: 1px solid #cccccc7d; */
+  }
+}
+
+h2 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 17px;
+}
+
+.acc-info {
+  display: flex;
+  flex-direction: column;
+  width: 50vw;
+  margin-top: 3%;
+}
+
+.prog-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.prog-item h4 {
+  white-space: nowrap;
+}
+
+.progress-fill {
+  background-image: linear-gradient(
+    to right,
+
+    #a51aa5 0%,
+
+    #bf34bf 51%,
+
+    #e83ec9 100%
+  );
+  display: flex;
+  justify-content: flex-start; /* Corrected */
+  align-items: flex-start; /* Corrected */
+  padding-right: 5%;
+  padding-left: 1%;
+  padding-bottom: 1%;
+  padding-top: 1%;
+  margin-left: 40%;
+  border-radius: 10px;
+  width: var(--initial-width);
+  animation: fillAnimation 1s ease forwards; /* Animation applied */
+}
+
+@keyframes fillAnimation {
+  from {
+    width: var(--initial-width);
+  }
+  to {
+    width: var(--final-width);
+  }
+}
+
+label {
+  display: block;
+  /* font-weight: bold; */
+  margin-bottom: 5px;
+}
+textarea {
+  margin-top: 4%;
+  border-radius: 10px;
+}
+
+input[type="text"]:focus,
+textarea:focus {
+  box-shadow: 0px 2px 20px rgba(200, 198, 198, 0.578);
+  /* border: none; */
+  outline: none;
+}
+
+.contant-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: red; */
+  border-radius: 20px;
+  box-shadow: 62px 67px 91px -21px #1f41bb;
+  margin: 0 10%;
+  padding-bottom: 2%;
+  margin-bottom: 10%;
+}
+
+.form-group input {
+  /* background-color: #0aa017; */
+  width: 30vw;
+  height: 4vh;
+  margin-bottom: 3%;
+  margin-top: 5%;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  padding: 1% 3%;
+}
+
+.form-group textarea {
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  width: 30vw;
+  padding: 1% 3%;
+}
+.contact-item .btns {
+  border-radius: 10px;
+  /* padding: 15px 13%; */
+}
+
+.send {
+  /* background-color: #00063a; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32vw;
+  margin-top: 4%;
+  
+}
+
+#submit-btn{
+  background-image: linear-gradient(
+    to right,
+    #9340ff 0%,
+    #ff3c5f 51%,
+    #ff3c5f 100%
+  );
+
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 3px #eee;
+  border-radius: 10px;
+  display: block;
+  font-weight: 500;
+  border: none;
+  width: 35%;
+  height: 4vh;
+  font-size: 17px;
+}
+
+#submit-btn:hover{
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+  box-shadow: 0 0 10px #eee;
+}
+
+
+
+
+
+/* Media query for smaller screen sizes */
+@media screen and (max-width: 768px) {
+  .item {
+    width: 80%;
+  }
+  .parent {
+    height: 90vh;
+    margin-bottom: 40%;
+  }
+  #cover {
+    /* height: 70vh; */
+    width: 100%;
+    object-fit: contain;
+    margin-top: 7%;
+  }
+  .btns div {
+    padding: 15px 13px;
+  }
+  .about-us {
+    height: 80vh;
+
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .desc {
+    width: 100%;
+  }
+  #ai-img {
+    height: 20vh;
+    margin-left: 35%;
+    margin-bottom: 5%;
   }
 }
