--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,9 @@
   /* display:flex; */
   height: 7vh;
   /* background-color: #01052b; */
-  box-shadow: 2px 1px 10px #1f41bb38;
+  box-shadow: 0 1px 10px #1f41bb38;
+  /* border-bottom: 2px solid #1f41bb38; */
+
   display: flex;
   align-items: center;
   justify-content: start;
@@ -123,8 +125,31 @@ body {
 } */
 
 .parent h1 {
-  font-size: 50px;
+  font-size: 53px;
+  overflow: hidden; /* Hide overflowing text */
+  white-space: nowrap; /* Prevent text from wrapping */
+  border-right: 3px solid transparent; /* Initial border */
+  animation: typing 3s steps(40) forwards, blink-caret 0.75s step-end forwards;
 }
+
+@keyframes typing {
+  from {
+    width: 0; /* Start with zero width (hidden) */
+  }
+  to {
+    width: 100%; /* Expand to full width */
+  }
+}
+
+@keyframes blink-caret {
+  from, to {
+    border-color: transparent; /* Hide caret */
+  }
+  50% {
+    border-color: white; /* Show caret */
+  }
+}
+
 
 .btns {
   display: flex;
@@ -254,6 +279,7 @@ body {
   align-items: flex-start;
 
   justify-content: center;
+  margin-bottom: 7%;
 }
 
 .item {
@@ -268,8 +294,8 @@ body {
   /* flex: 1; Allow the item to grow and take available vertical space */
   display: flex;
   flex-direction: column;
-  margin-bottom: 5%;
 }
+
 .try-btn {
   margin-top: auto;
 }
@@ -309,6 +335,8 @@ body {
   opacity: 0;
   width: 40%;
   height: 40%;
+  cursor: pointer;
+
 }
 
 .clf-page {
@@ -553,6 +581,7 @@ textarea:focus {
   margin: 0 10%;
   padding-bottom: 2%;
   margin-bottom: 10%;
+
 }
 
 
@@ -630,14 +659,39 @@ textarea:focus {
 
 
 
+
 /* Media query for smaller screen sizes */
 @media screen and (max-width: 768px) {
+  .services {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    padding-left:7%;
+  }
+
+  .wrapper{
+    /* padding-left:15%; */
+    padding-bottom: 15%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+
   .item {
-    width: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   .parent {
     height: 90vh;
     margin-bottom: 40%;
+    width: 100%;
   }
   #cover {
     /* height: 70vh; */
@@ -660,8 +714,120 @@ textarea:focus {
     width: 100%;
   }
   #ai-img {
-    height: 20vh;
-    margin-left: 35%;
+    height: 30vh;
+    width: 50vw;
+    /* margin-left: 35%; */
+    margin: 0;
+    padding: 0;
     margin-bottom: 5%;
   }
+  .nav{
+    width: 100%;
+    box-shadow: none;
+  }
+
+  .btns div {
+  
+
+  
+    box-shadow: 0 0 3px #b3b5cc;
+    padding:  auto;
+    white-space: nowrap;
+    margin-bottom: 15px;
+  }
+  .about-us {
+
+    height: 80vh;
+    width: 100%;
+    box-shadow: 2px 94px 64px -5px #1f41bb;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    flex-wrap: nowrap;
+    gap: 0;
+    padding: 0 auto;
+  } 
+  
+  .container{
+    /* width: 105vw; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+
+  .desc {
+    /* width: 40vw; */
+    display: block;
+    margin-bottom: 10%;
+          
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    padding: 0 0;
+    /* max-height: 40vh; */
+  }
+  .form-group input {
+    /* background-color: #0aa017; */
+    width: 60vw;
+    margin-bottom: 3%;
+    margin-top: 5%;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    padding: 1% 3%;
+  }
+  .contant-section{
+    width: 100%;
+  }
+  .form-group textarea{
+    width: 60vw;
+  }
+  hr{
+    /* padding-left:40%; */
+    margin-left: 10%;
+    width: 80%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+  .hr{
+    display: none;
+  }
+  center h2 {
+    margin-left:5%;
+    margin-bottom: 10%;
+  }
+  .send{
+    width: 80%;
+    margin-bottom: 10%;
+
+  }
+  .try-btn div {
+    /* padding-top: 3%; */
+  
+    box-shadow: 0 0 3px #00063e;
+    padding: 15% 50%;
+    white-space: nowrap;
+  }
+
+
+
+  #submit-btn{
+
+
+    width: 80%;
+    height: 4vh;
+    font-size: 17px;
+  }
+  
+
+
 }
+
+
